# nitroexample

./: App.tsx  NitroExample.podspec  README.md  nitro.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/nitroexample/: MainApplication.kt
ios/: Podfile
ios/NitroExample/: AppDelegate.swift  Info.plist
ios/NitroExample.xcodeproj/: project.pbxproj
nitro-example/: CMakeLists.txt  build.gradle
nitro-example/src/main/cpp/: cpp-adapter.cpp
nitro-example/src/main/java/com/margelo/nitro/example/: HybridMathCalculator.kt  NitroExamplePackage.kt
nitrospecs/: MathCalculator.nitro.ts
src/components/: MathCalculatorExample.tsx
src/modules/: MathCalculator.ts
